fix(components): rectify broken styles

--- a/components/PostsGrid/PostCard.module.css
+++ b/components/PostsGrid/PostCard.module.css
@@ -1,4 +1,4 @@
-h2.title {
+.title.title.title {
   @apply my-3;
 }
 
